--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head>
     <title>Ristorante Con Fusion</title>
 </head>
+    <!--Required meta data always comes first-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to="no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
 
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 <body>
 
     <header>
@@ -95,7 +101,10 @@
            </div>
         </div>
     </footer>
-
+ <!-- jQuery first, then Popper.js, then Bootstrap js.-->
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
