--- a/contactus.html
+++ b/contactus.html
@@ -135,13 +135,13 @@
                             <option>Email</option>
                         </select>
                     </div>
+                </div>
                     <div class="form-group row">
-                        <label for="feedback" class="col-md-2 col-form-label">Your Feedback</label>
+                        <label for="feedback" class="col col-md-2 col-form-label">Feedback</label>
                         <div class="col-md-10">
                             <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
                         </div>    
-                       </div>
-                </div>
+                    </div>
                 <div class="form-group row">
                     <div class="offset-md-2 col-md-10">
                         <button type="submit" class="btn btn-primary">
