--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
     <div class="container">
         <div class="row row-content">
+            <!--CAROUSEL PUTS CONTENT IN A SLIDE ACTION-->
             <div class="col">
                 <div id="mycarousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox"> 
@@ -171,6 +172,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--THE INDICATORS-->
                     <ol class="carousel-indicators">
                         <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#mycarousel" data-slide-to="1"></li>
@@ -182,14 +184,10 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                    <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-sm" id="carousel-pause">
-                            <i class="fa fa-pause"></i>
+                    <!--THE CONTROL Single BUTTON-->
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
+                            <span class="fa fa-pause"></span>
                         </button>
-                        <button class="btn btn-danger btn-sm" id="carousel-play">
-                            <i class="fa fa-play"></i>
-                        </button>
-                    </div>
                 </div>
             </div>
         </div>
@@ -206,8 +204,6 @@
                              ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
                 </div>
-               
-               
             </div>
         </div>
 
@@ -281,6 +277,7 @@
            </div>
            <div class="row justify-content-center">             
                 <div class="col-auto">
+
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
            </div>
@@ -293,13 +290,17 @@
     <!--AcTIVATE THE SLIDE PAUSE AND PLAY ACTION-->
     <script>
         $(document).ready(function() {
-            $('#mycarousel').carousel( { interval: 2000} );
-            $('#carousel-pause').click(function(){
-                $('#mycarousel').carousel('pause');
-            });
-            $('carousel-play').click(function(){
-                $('#mycarousel').carousel('cycle');
-            });
+            $("#carouselButton").click(function(){
+                if ($('#carouselButton').children("span").hasClass("fa-pause")){
+                $('#mycarousel').carousel("pause");
+                $('#carouselButton').children("span").removeClass("fa-pause");
+                $('#carouselButton').children("span").addClass("fa-play");
+            }
+            else if ($("#carouselButton").children("span").hasClass("fa-play")) {
+                $("#mycarousel").carousel("cycle");
+                $("#carouselButton").children("span").removeClass("fa-play");
+                $("#carouselButton").children("span").addClass("fa-pause");
+            }
         });
     </script>
 </body>
