--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
     <script>
         $(document).ready(function() {
             $("#carouselButton").click(function(){
+                $("#mycarousel").carousel({ interval: 2000 });
                 if ($('#carouselButton').children("span").hasClass("fa-pause")){
                 $('#mycarousel').carousel("pause");
                 $('#carouselButton').children("span").removeClass("fa-pause");
@@ -301,6 +302,7 @@
                 $("#carouselButton").children("span").removeClass("fa-play");
                 $("#carouselButton").children("span").addClass("fa-pause");
             }
+        });
         });
     </script>
 </body>
