--- a/aboutus.html
+++ b/aboutus.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
 
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-tarrget="#navbar">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand mr-auto" href="./index.html"><img src="img/logo.png" height="30" width="41"></a>
@@ -107,7 +107,7 @@
                     <div class="card">
                         <div class="card-header" role="tab" id="peterhead">
                             <h3 class="mb-0">
-                                <a data-toggle="collapse" data-tarrget="#peter">
+                                <a data-toggle="collapse" data-target="#peter">
                                     Peter Pan <small>Chief Epicurious Officer</small>
                                 </a> 
                             </h3>
@@ -122,7 +122,7 @@
                     <div class="card">
                         <div class="card-header" role="tab" id="dannyhead">
                             <h3 class="mb-0">
-                                <a class="collapsed" data-toggle="collapse" data-tarrget="#danny">
+                                <a class="collapsed" data-toggle="collapse" data-target="#danny">
                                     Dhanasekaran Witherspoon <small>Chief Food Officer</small>
                                 </a> 
                             </h3>
@@ -137,7 +137,7 @@
                     <div class="card">
                         <div class="card-header" role="tab" id="agumbehead">
                             <h3 class="mb-0">
-                                <a class="collapsed" data-toggle="collapse" data-tarrget="#agumbe">
+                                <a class="collapsed" data-toggle="collapse" data-target="#agumbe">
                                     Agumbe Tang <small>Chief Taste Officer</small></small>
                                 </a> 
                             </h3>
@@ -152,7 +152,7 @@
                     <div class="card">
                         <div class="card-header" role="tab" id="albertohead">
                             <h3 class="mb-0">
-                                <a class="collapsed" data-toggle="collapse" data-tarrget="#alberto">
+                                <a class="collapsed" data-toggle="collapse" data-target="#alberto">
                                     Alberto Somayya <small>Executive Chef</small>
                                 </a> 
                             </h3>
